# ChatRobot

./: .gitignore  README.txt
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/qcode/chatrobot/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CarrierConfig.h  Node.h
android/app/src/main/cpp/DataBase/: DatabaseProxy.h  MemberInfo.h
android/app/src/main/cpp/Tools/: JniUtils.hpp
android/app/src/main/java/com/qcode/chatrobot/: MainActivity.java
android/app/src/main/java/com/qcode/chatrobot/manager/: GroupManager.java
android/app/src/main/java/com/qcode/chatrobot/service/: CarrierService0.java  CarrierService1.java  CarrierService11.java  CarrierService2.java  CarrierService5.java  CarrierService6.java
android/app/src/main/java/com/qcode/chatrobot/ui/: GroupListAdapter.java
android/app/src/main/res/drawable-hdpi/: background_drawable.xml  creategroup_normal.xml  list_item_bg.xml  list_item_bg_focus.xml  list_item_icon.xml  listview_item_bg_selector.xml  title_drawable.xml
android/app/src/main/res/drawable-v24/: rounded_corners_pop.xml
android/app/src/main/res/drawable-xxhdpi/: background.xml  button_drawable.xml  create_btn_selector.xml  creategroup_normal.xml  list_item_bg.xml  list_item_focus_border.xml  list_item_normal_border.xml  listview_item_bg_selector.xml  qrcode_bg.xml
android/app/src/main/res/layout/: activity_main.xml  item.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/keystore/: keystore.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CarrierConfig.cpp  CarrierRobot.cpp  CarrierRobot.h  DatabaseProxy.cpp  DatabaseProxy.h  ErrCode.cpp  ErrCode.h
app/src/main/cpp/Command/: ChatRobotCmd.cpp  ChatRobotCmd.hpp
app/src/main/cpp/DataBase/: DatabaseProxy.cpp  DatabaseProxy.h  MemberInfo.cpp  MemberInfo.h  MessageInfo.cpp  MessageInfo.h
app/src/main/java/com/qcode/chatrobot/: MainActivity.java
app/src/main/java/com/qcode/chatrobot/common/: CarrierProxy.java  CommonVar.java  FileUtils.java  MyQRCode.java
app/src/main/java/com/qcode/chatrobot/manager/: GroupInfo.java  GroupManager.java  MemberInfo.java
app/src/main/java/com/qcode/chatrobot/service/: CarrierService10.java  CarrierService3.java  CarrierService4.java  CarrierService7.java  CarrierService8.java  CarrierService9.java  CarrierServiceBase.java
app/src/main/java/com/qcode/chatrobot/ui/: GroupListAdapter.java  MemberInfo.java  MemberListAdapter.java  PopUpWindowSelf.java  QRCode.java
app/src/main/jni/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml  item.xml  member_item.xml  popupwindow.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/qcode/chatrobot/: ExampleUnitTest.java
linux/common/: CommonVar.h  FileUtils.cpp  FileUtils.hpp
linux/manager/: CMakeLists.txt  main.cpp  managerApi.cpp
linux/manager/src/: DatabaseProxy.cpp  DatabaseProxy.h  GroupInfo.cpp  GroupInfo.h  manager.cpp  manager.h
linux/service/: CMakeLists.txt  carrierService.cpp  carrierService.h  main.cpp
linux/service/cpp/: CarrierRobot.cpp  CarrierRobot.h
linux/service/cpp/DataBase/: DatabaseProxy.cpp  MemberInfo.cpp
linux/service/source/: CarrierConfig.h  CarrierRobot.cpp  CarrierRobot.h  Node.cpp
linux/service/source/Command/: ChatRobotCmd.cpp  ChatRobotCmd.hpp
linux/service/source/DataBase/: DatabaseProxy.cpp  DatabaseProxy.h  MemberInfo.cpp  MemberInfo.h  MessageInfo.h
linux/service/source/Tools/: JniUtils.cpp
linux/ui/: README.txt  chatrobot_restful_api.py  myproject.py  server.py  startCarrier.sh  startCarrierByServer.sh  test.py
linux/ui/appserver/: README.txt  chatrobot.ini  chatrobot_config.ini  chatrobot_restful_api.py  myproject.py  server.py  server_wsgi.py  startCarrierByServer.sh  wsgi.py
linux/ui/webserver/: package.json
linux/ui/webserver/chatrobot_server/: README.md  package.json
linux/ui/webserver/chatrobot_server/public/: index.html
linux/ui/webserver/chatrobot_server/src/: App.vue  main.js
linux/ui/webserver/chatrobot_server/src/components/: GroupList.vue
linux/ui/webserver/chatrobot_server/src/vuex/: store.js
